--- a/index.html
+++ b/index.html
@@ -4,9 +4,30 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Influencer Tools</title>
+    <title>Influencer Site</title>
+    <!-- google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,400;1,300&family=Oswald&family=Poppins:wght@500&family=Ubuntu&display=swap"
+      rel="stylesheet"
+    />
     <!-- css link -->
-    <link rel="stylesheet" href=styles/style.css">
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav class="container">
+        <div>
+          <h3 id="tools">Influencer Tools</h3>
+        </div>
+        <ul class="menu-bar">
+          <li><a href=""></a>Home</li>
+          <li><a href=""></a>Feature</li>
+          <li><a href=""></a>About</li>
+          <li><a href=""></a>Contact</li>
+        </ul>
+      </nav>
+    </header>
+  </body>
 </html>
