--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Influencer Site</title>
+    <!-- font awesome -->
+    <script
+      src="https://kit.fontawesome.com/2f2bf40a95.js"
+      crossorigin="anonymous"
+    ></script>
     <!-- google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -26,6 +31,7 @@
           <li><a href=""></a>Feature</li>
           <li><a href=""></a>About</li>
           <li><a href=""></a>Contact</li>
+          <i class="fas fa-shopping-cart"></i>
         </ul>
       </nav>
     </header>
