--- a/index.html
+++ b/index.html
@@ -35,5 +35,26 @@
         </ul>
       </nav>
     </header>
+    <section class="first-section">
+      <div class="camera">
+        <div>
+          <h1>Be The</h1>
+          <h1><span>R</span>evolution</h1>
+        </div>
+        <p class="first-para">
+          Meet Canon's new addition to the EOS System, the EOS R camera. The
+          foundation of this system is an entirely new lens mount, designed for
+          optical excellence today and incredible optical potential for the
+          future.
+        </p>
+        <br />
+        <a class="view" target="blan" href=""
+          >View More <i class="fas fa-arrow-right"></i
+        ></a>
+      </div>
+      <div class="first-photo">
+        <img class="photo" src="images/1stpic.jfif" alt="" />
+      </div>
+    </section>
   </body>
 </html>
