--- a/index.html
+++ b/index.html
@@ -56,5 +56,10 @@
         <img class="photo" src="images/1stpic.jfif" alt="" />
       </div>
     </section>
+    <section>
+      <header>
+        <h2>Tools</h2>
+      </header>
+    </section>
   </body>
 </html>
