--- a/index.html
+++ b/index.html
@@ -60,6 +60,162 @@
       <header>
         <h2>Tools</h2>
       </header>
+      <div class="tools">
+        <div class="gears">
+          <div class="gear-banner">
+            <img src="images/air.png" alt="Macbook Air" />
+          </div>
+          <div gear-detail>
+            <h3>Macbook Air M1</h3>
+            <p>$999</p>
+          </div>
+          <div class="gear-info">
+            <div>
+              <i class="fas fa-star filled"></i>
+              <i class="fas fa-star filled"></i>
+              <i class="fas fa-star filled"></i>
+              <i class="fas fa-star filled"></i>
+              <i class="far fa-star empty"></i>
+              <span>4.8</span>
+            </div>
+            <div class="info">
+              <p>Apple M1 Chip with 8-Core</p>
+              <p>CPU and 7-Core GPU</p>
+              <p>256GB Storage</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="tools">
+        <div class="gears">
+          <div class="gear-banner">
+            <img src="images/airpods.jfif" alt="Macbook Air" />
+          </div>
+          <div gear-detail>
+            <h3>Apple Airpods Pro</h3>
+            <p>$249</p>
+          </div>
+          <div class="gear-info">
+            <div>
+              <i class="fas fa-star filled"></i>
+              <i class="fas fa-star filled"></i>
+              <i class="fas fa-star filled"></i>
+              <i class="fas fa-star filled"></i>
+              <i class="far fa-star empty"></i>
+              <span>4.9</span>
+            </div>
+            <div class="info">
+              <p>Custom high-excursion Apple driver</p>
+              <p>Active Noise Cancellation</p>
+              <p>Transparency mode</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="tools">
+        <div class="gears">
+          <div class="gear-banner">
+            <img src="images/watch.jpg" alt="Macbook Air" />
+          </div>
+          <div gear-detail>
+            <h3>Apple Watch Series 7</h3>
+            <p>$449</p>
+          </div>
+          <div class="gear-info">
+            <div>
+              <i class="fas fa-star filled"></i>
+              <i class="fas fa-star filled"></i>
+              <i class="fas fa-star filled"></i>
+              <i class="fas fa-star filled"></i>
+              <i class="far fa-star empty"></i>
+              <span>4.7</span>
+            </div>
+            <div class="info">
+              <p>Largest Display</p>
+              <p>Improved Durability</p>
+              <p>Fast Charging</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="tools">
+        <div class="gears">
+          <div class="gear-banner">
+            <img src="images/drone.jpg" alt="Drone" />
+          </div>
+          <div gear-detail>
+            <h3>Inspire 2</h3>
+            <p>$2,299</p>
+          </div>
+          <div class="gear-info">
+            <div>
+              <i class="fas fa-star filled"></i>
+              <i class="fas fa-star filled"></i>
+              <i class="fas fa-star filled"></i>
+              <i class="fas fa-star filled"></i>
+              <i class="far fa-star empty"></i>
+              <span>4.7</span>
+            </div>
+            <div class="info">
+              <p>T650A</p>
+              <p>9.37lbs (4250 g)</p>
+              <p>Pitch: 300°/s</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="tools">
+        <div class="gears">
+          <div class="gear-banner">
+            <img src="images/action-camera.jpg" alt="Action-camera" />
+          </div>
+          <div gear-detail>
+            <h3>Action Camera</h3>
+            <p>$300</p>
+          </div>
+          <div class="gear-info">
+            <div>
+              <i class="fas fa-star filled"></i>
+              <i class="fas fa-star filled"></i>
+              <i class="fas fa-star filled"></i>
+              <i class="fas fa-star filled"></i>
+              <i class="far fa-star empty"></i>
+              <span>4.7</span>
+            </div>
+            <div class="info">
+              <p>HERO 9</p>
+              <p>5K Video, Waterproof, HyperSmooth 3.0</p>
+              <p>Front Display + Rear Touch Screen</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="tools">
+        <div class="gears">
+          <div class="gear-banner">
+            <img src="images/speakers.jpg" alt="Speakers" />
+          </div>
+          <div gear-detail>
+            <h3>JBL Flip 4</h3>
+            <p>$150</p>
+          </div>
+          <div class="gear-info">
+            <div>
+              <i class="fas fa-star filled"></i>
+              <i class="fas fa-star filled"></i>
+              <i class="fas fa-star filled"></i>
+              <i class="fas fa-star filled"></i>
+              <i class="far fa-star empty"></i>
+              <span>4.7</span>
+            </div>
+            <div class="info">
+              <p>1 x JBL Micro USB Cable</p>
+              <p>1 x Safety Sheet</p>
+              <p>1 x Warranty Card</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
   </body>
 </html>
