--- a/index.html
+++ b/index.html
@@ -205,6 +205,11 @@
             </div>
           </div>
         </div>
+        <div class="see-more">
+          <a target="blank" href=""
+            >See More <i class="fas fa-arrow-right"></i
+          ></a>
+        </div>
       </div>
     </section>
   </body>
