--- a/index.html
+++ b/index.html
@@ -21,196 +21,224 @@
     <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
-    <header>
-      <nav class="container">
-        <div>
-          <h3 id="tools">Influencer Tools</h3>
-        </div>
-        <ul class="menu-bar">
-          <li><a href=""></a>Home</li>
-          <li><a href=""></a>Feature</li>
-          <li><a href=""></a>About</li>
-          <li><a href=""></a>Contact</li>
-          <i class="fas fa-shopping-cart"></i>
-        </ul>
-      </nav>
-    </header>
-    <section class="first-section">
-      <div class="camera">
-        <div>
-          <h1>Be The</h1>
-          <h1><span>R</span>evolution</h1>
-        </div>
-        <p class="first-para">
-          Meet Canon's new addition to the EOS System, the EOS R camera. The
-          foundation of this system is an entirely new lens mount, designed for
-          optical excellence today and incredible optical potential for the
-          future.
-        </p>
-        <br />
-        <a class="view" target="blan" href=""
-          >View More <i class="fas fa-arrow-right"></i
-        ></a>
-      </div>
-      <div class="first-photo">
-        <img class="photo" src="images/1stpic.jfif" alt="" />
-      </div>
-    </section>
-    <section>
+    <main>
       <header>
-        <h2>Tools</h2>
+        <nav class="container">
+          <div>
+            <h3 id="tools">Influencer Tools</h3>
+          </div>
+          <ul class="menu-bar">
+            <li><a href=""></a>Home</li>
+            <li><a href=""></a>Feature</li>
+            <li><a href=""></a>About</li>
+            <li><a href=""></a>Contact</li>
+            <i class="fas fa-shopping-cart"></i>
+          </ul>
+        </nav>
       </header>
-      <div class="tools">
-        <div class="gears">
-          <div class="gear-banner">
-            <img src="images/air.png" alt="Macbook Air" />
+      <section class="first-section">
+        <div class="camera">
+          <div>
+            <h1>Be The</h1>
+            <h1><span>R</span>evolution</h1>
           </div>
-          <div gear-detail>
-            <h3>Macbook Air M1</h3>
-            <p>$999</p>
-          </div>
-          <div class="gear-info">
-            <div>
-              <i class="fas fa-star filled"></i>
-              <i class="fas fa-star filled"></i>
-              <i class="fas fa-star filled"></i>
-              <i class="fas fa-star filled"></i>
-              <i class="far fa-star empty"></i>
-              <span>4.8</span>
-            </div>
-            <div class="info">
-              <p>Apple M1 Chip with 8-Core</p>
-              <p>CPU and 7-Core GPU</p>
-              <p>256GB Storage</p>
-            </div>
-          </div>
-        </div>
-        <div class="gears">
-          <div class="gear-banner">
-            <img src="images/airpods.jfif" alt="Macbook Air" />
-          </div>
-          <div gear-detail>
-            <h3>Apple Airpods Pro</h3>
-            <p>$249</p>
-          </div>
-          <div class="gear-info">
-            <div>
-              <i class="fas fa-star filled"></i>
-              <i class="fas fa-star filled"></i>
-              <i class="fas fa-star filled"></i>
-              <i class="fas fa-star filled"></i>
-              <i class="far fa-star empty"></i>
-              <span>4.9</span>
-            </div>
-            <div class="info">
-              <p>Custom high-excursion Apple driver</p>
-              <p>Active Noise Cancellation</p>
-              <p>Transparency mode</p>
-            </div>
-          </div>
-        </div>
-        <div class="gears">
-          <div class="gear-banner">
-            <img src="images/watch.jpg" alt="Macbook Air" />
-          </div>
-          <div gear-detail>
-            <h3>Apple Watch Series 7</h3>
-            <p>$449</p>
-          </div>
-          <div class="gear-info">
-            <div>
-              <i class="fas fa-star filled"></i>
-              <i class="fas fa-star filled"></i>
-              <i class="fas fa-star filled"></i>
-              <i class="fas fa-star filled"></i>
-              <i class="far fa-star empty"></i>
-              <span>4.7</span>
-            </div>
-            <div class="info">
-              <p>Largest Display</p>
-              <p>Improved Durability</p>
-              <p>Fast Charging</p>
-            </div>
-          </div>
-        </div>
-        <div class="gears">
-          <div class="gear-banner">
-            <img src="images/drone.jpg" alt="Drone" />
-          </div>
-          <div gear-detail>
-            <h3>Inspire 2</h3>
-            <p>$2,299</p>
-          </div>
-          <div class="gear-info">
-            <div>
-              <i class="fas fa-star filled"></i>
-              <i class="fas fa-star filled"></i>
-              <i class="fas fa-star filled"></i>
-              <i class="fas fa-star filled"></i>
-              <i class="far fa-star empty"></i>
-              <span>4.7</span>
-            </div>
-            <div class="info">
-              <p>T650A</p>
-              <p>9.37lbs (4250 g)</p>
-              <p>Pitch: 300°/s</p>
-            </div>
-          </div>
-        </div>
-        <div class="gears">
-          <div class="gear-banner">
-            <img src="images/action-camera.jpg" alt="Action-camera" />
-          </div>
-          <div gear-detail>
-            <h3>Action Camera</h3>
-            <p>$300</p>
-          </div>
-          <div class="gear-info">
-            <div>
-              <i class="fas fa-star filled"></i>
-              <i class="fas fa-star filled"></i>
-              <i class="fas fa-star filled"></i>
-              <i class="fas fa-star filled"></i>
-              <i class="far fa-star empty"></i>
-              <span>4.7</span>
-            </div>
-            <div class="info">
-              <p>HERO 9</p>
-              <p>5K Video, Waterproof, HyperSmooth 3.0</p>
-              <p>Front Display + Rear Touch Screen</p>
-            </div>
-          </div>
-        </div>
-        <div class="gears">
-          <div class="gear-banner">
-            <img src="images/speakers.jpg" alt="Speakers" />
-          </div>
-          <div gear-detail>
-            <h3>JBL Flip 4</h3>
-            <p>$150</p>
-          </div>
-          <div class="gear-info">
-            <div>
-              <i class="fas fa-star filled"></i>
-              <i class="fas fa-star filled"></i>
-              <i class="fas fa-star filled"></i>
-              <i class="fas fa-star filled"></i>
-              <i class="far fa-star empty"></i>
-              <span>4.7</span>
-            </div>
-            <div class="info">
-              <p>1 x JBL Micro USB Cable</p>
-              <p>1 x Safety Sheet</p>
-              <p>1 x Warranty Card</p>
-            </div>
-          </div>
-        </div>
-        <div class="see-more">
-          <a target="blank" href=""
-            >See More <i class="fas fa-arrow-right"></i
+          <p class="first-para">
+            Meet Canon's new addition to the EOS System, the EOS R camera. The
+            foundation of this system is an entirely new lens mount, designed
+            for optical excellence today and incredible optical potential for
+            the future.
+          </p>
+          <br />
+          <a class="view" target="blan" href=""
+            >View More <i class="fas fa-arrow-right"></i
           ></a>
         </div>
+        <div class="first-photo">
+          <img class="photo" src="images/1stpic.jfif" alt="" />
+        </div>
+      </section>
+      <section>
+        <header>
+          <h2>Tools</h2>
+        </header>
+        <div class="tools">
+          <div class="gears">
+            <div class="gear-banner">
+              <img src="images/air.png" alt="Macbook Air" />
+            </div>
+            <div gear-detail>
+              <h3>Macbook Air M1</h3>
+              <p>$999</p>
+            </div>
+            <div class="gear-info">
+              <div>
+                <i class="fas fa-star filled"></i>
+                <i class="fas fa-star filled"></i>
+                <i class="fas fa-star filled"></i>
+                <i class="fas fa-star filled"></i>
+                <i class="far fa-star empty"></i>
+                <span>4.8</span>
+              </div>
+              <div class="info">
+                <p>Apple M1 Chip with 8-Core</p>
+                <p>CPU and 7-Core GPU</p>
+                <p>256GB Storage</p>
+              </div>
+            </div>
+          </div>
+          <div class="gears">
+            <div class="gear-banner">
+              <img src="images/airpods.jfif" alt="Macbook Air" />
+            </div>
+            <div gear-detail>
+              <h3>Apple Airpods Pro</h3>
+              <p>$249</p>
+            </div>
+            <div class="gear-info">
+              <div>
+                <i class="fas fa-star filled"></i>
+                <i class="fas fa-star filled"></i>
+                <i class="fas fa-star filled"></i>
+                <i class="fas fa-star filled"></i>
+                <i class="far fa-star empty"></i>
+                <span>4.9</span>
+              </div>
+              <div class="info">
+                <p>Custom high-excursion Apple driver</p>
+                <p>Active Noise Cancellation</p>
+                <p>Transparency mode</p>
+              </div>
+            </div>
+          </div>
+          <div class="gears">
+            <div class="gear-banner">
+              <img src="images/watch.jpg" alt="Macbook Air" />
+            </div>
+            <div gear-detail>
+              <h3>Apple Watch Series 7</h3>
+              <p>$449</p>
+            </div>
+            <div class="gear-info">
+              <div>
+                <i class="fas fa-star filled"></i>
+                <i class="fas fa-star filled"></i>
+                <i class="fas fa-star filled"></i>
+                <i class="fas fa-star filled"></i>
+                <i class="far fa-star empty"></i>
+                <span>4.7</span>
+              </div>
+              <div class="info">
+                <p>Largest Display</p>
+                <p>Improved Durability</p>
+                <p>Fast Charging</p>
+              </div>
+            </div>
+          </div>
+          <div class="gears">
+            <div class="gear-banner">
+              <img src="images/drone.jpg" alt="Drone" />
+            </div>
+            <div gear-detail>
+              <h3>Inspire 2</h3>
+              <p>$2,299</p>
+            </div>
+            <div class="gear-info">
+              <div>
+                <i class="fas fa-star filled"></i>
+                <i class="fas fa-star filled"></i>
+                <i class="fas fa-star filled"></i>
+                <i class="fas fa-star filled"></i>
+                <i class="far fa-star empty"></i>
+                <span>4.7</span>
+              </div>
+              <div class="info">
+                <p>T650A</p>
+                <p>9.37lbs (4250 g)</p>
+                <p>Pitch: 300°/s</p>
+              </div>
+            </div>
+          </div>
+          <div class="gears">
+            <div class="gear-banner">
+              <img src="images/action-camera.jpg" alt="Action-camera" />
+            </div>
+            <div gear-detail>
+              <h3>Action Camera</h3>
+              <p>$300</p>
+            </div>
+            <div class="gear-info">
+              <div>
+                <i class="fas fa-star filled"></i>
+                <i class="fas fa-star filled"></i>
+                <i class="fas fa-star filled"></i>
+                <i class="fas fa-star filled"></i>
+                <i class="far fa-star empty"></i>
+                <span>4.7</span>
+              </div>
+              <div class="info">
+                <p>HERO 9</p>
+                <p>5K Video, Waterproof, HyperSmooth 3.0</p>
+                <p>Front Display + Rear Touch Screen</p>
+              </div>
+            </div>
+          </div>
+          <div class="gears">
+            <div class="gear-banner">
+              <img src="images/speakers.jpg" alt="Speakers" />
+            </div>
+            <div gear-detail>
+              <h3>JBL Flip 4</h3>
+              <p>$150</p>
+            </div>
+            <div class="gear-info">
+              <div>
+                <i class="fas fa-star filled"></i>
+                <i class="fas fa-star filled"></i>
+                <i class="fas fa-star filled"></i>
+                <i class="fas fa-star filled"></i>
+                <i class="far fa-star empty"></i>
+                <span>4.7</span>
+              </div>
+              <div class="info">
+                <p>1 x JBL Micro USB Cable</p>
+                <p>1 x Safety Sheet</p>
+                <p>1 x Warranty Card</p>
+              </div>
+            </div>
+          </div>
+          <div class="see-more">
+            <span>See More<i class="fas fa-arrow-right"></i></span>
+          </div>
+        </div>
+      </section>
+      <section class="media">
+        <div>
+          <div id="sound">
+            <h2>The Real Sound</h2>
+          </div>
+          <div class="audio">
+            <div class="lipa">
+              <img src="images/dua-lipa.jpg" alt="" />
+            </div>
+            <audio controls>
+              <source
+                src="audio/dua_lipa_feat_dababy_-_levitating.mp3"
+                type="audio/mp3"
+              />
+            </audio>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <h3 class="tag">Influencer Tools</h3>
+      <p>Copyright © 2022 influencer Tools</p>
+      <p>All Rights Reserved</p>
+      <div class="icons">
+        <i class="fab fa-instagram"></i>
+        <i class="fab fa-facebook"></i>
+        <i class="fab fa-twitter"></i>
       </div>
-    </section>
+    </footer>
   </body>
 </html>
