--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </header>
       <section class="first-section">
         <div class="camera">
-          <div>
+          <div class="first-head">
             <h1>Be The</h1>
             <h1><span>R</span>evolution</h1>
           </div>
@@ -49,15 +49,13 @@
             the future.
           </p>
           <br />
-          <a class="view" target="blan" href=""
-            >View More <i class="fas fa-arrow-right"></i
-          ></a>
+          <span class="view">View More <i class="fas fa-arrow-right"></i></span>
         </div>
         <div class="first-photo">
           <img class="photo" src="images/1stpic.jfif" alt="" />
         </div>
       </section>
-      <section>
+      <section class="second-section">
         <header>
           <h2>Tools</h2>
         </header>
