--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
           <span>See More<i class="fas fa-arrow-right"></i></span>
         </div>
       </section>
-      <section class="media">
+      <!-- <section class="media">
         <div>
           <div id="sound">
             <h2>The Real Sound</h2>
@@ -226,7 +226,7 @@
             </audio>
           </div>
         </div>
-      </section>
+      </section> -->
     </main>
     <footer>
       <h3 class="tag">Influencer Tools</h3>
