--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Influencer Site</title>
+    <!-- favicon -->
+    <link rel="shortcut icon" href="images/logo.jfif" type="image/x-icon" />
     <!-- font awesome -->
     <script
       src="https://kit.fontawesome.com/2f2bf40a95.js"
